--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "deprecation-loader",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Loader notifies deprecated code",
   "main": "src/index.js",
   "scripts": {
@@ -11,11 +11,15 @@
   "repository": {
     "url": "https://github.com/novavovikov/deprecation-loader"
   },
-  "keywords": ["webpack", "deprecated", "deprecation"],
+  "keywords": [
+    "webpack",
+    "deprecated",
+    "deprecation"
+  ],
   "author": "NovaVovikov",
   "license": "MIT",
   "dependencies": {
-    "@babel/parser": "^7.12.5",
+    "comment-parser": "^0.7.6",
     "compare-versions": "^3.6.0",
     "loader-utils": "^2.0.0",
     "schema-utils": "^3.0.0"
