--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "deprecation-loader",
   "version": "0.0.3",
   "description": "Loader notifies deprecated code",
-  "main": "src/index.js",
+  "main": "lib/index.js",
   "scripts": {
-    "start": "rm -rf dist && webpack",
+    "test": "npm run prettier -- -l && jest",
     "prettier": "git ls-files | grep -E '\\.(js|jsx|ts|tsx|md|json)$' | xargs prettier",
     "prettier:fix": "npm run prettier -- --write ."
   },
@@ -25,8 +25,7 @@
     "schema-utils": "^3.0.0"
   },
   "devDependencies": {
-    "prettier": "^2.1.2",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^4.2.0"
+    "jest": "^26.6.3",
+    "prettier": "^2.1.2"
   }
 }
